feat: add all weagets and add component about country

--- a/src/client/locales/by/translation.json
+++ b/src/client/locales/by/translation.json
@@ -2,5 +2,7 @@
   "country": "Беларусь",
   "login": "увайсці",
   "logout": "выйсці",
+  "speed": "хуткасць",
+  "humidity": "вільготнасць",
   "searchPlaceholder": "Расія"
 }
