--- a/src/client/locales/ru/translation.json
+++ b/src/client/locales/ru/translation.json
@@ -2,5 +2,7 @@
   "country": "Беларусь",
   "login": "войти",
   "logout": "выйти",
+  "speed": "скорость",
+  "humidity": "влажность",
   "searchPlaceholder": "Россия"
 }
