--- a/src/client/locales/en/translation.json
+++ b/src/client/locales/en/translation.json
@@ -10,5 +10,8 @@
   "Click to select a file": "Click to select a file",
   "Select a file": "Select a file",
   "Download": "Download",
-  "Close": "Close"      
+  "Close": "Close",
+  "No comments and ratings": "No comments and ratings",
+  "Your comment": "Your comment",
+  "Add": ""     
 }
