feat: add style for comments

--- a/src/client/locales/by/translation.json
+++ b/src/client/locales/by/translation.json
@@ -12,6 +12,6 @@
   "Download": "Загрузіць",
   "Close": "Зачыніць",
   "No comments and ratings": "Без каментароў і ацэнак",
-  "Your comment": "Ваш каментар",
+  "Your comment": "Ваш каментарый",
   "Add": "Дадаць"  
 }
