--- a/src/client/locales/en/translation.json
+++ b/src/client/locales/en/translation.json
@@ -13,5 +13,5 @@
   "Close": "Close",
   "No comments and ratings": "No comments and ratings",
   "Your comment": "Your comment",
-  "Add": ""     
+  "Add": "Add"
 }
