feat: add styles and language

--- a/src/client/locales/by/translation.json
+++ b/src/client/locales/by/translation.json
@@ -13,5 +13,6 @@
   "Close": "Зачыніць",
   "No comments and ratings": "Без каментароў і ацэнак",
   "Your comment": "Ваш каментарый",
-  "Add": "Дадаць"  
+  "Add": "Дадаць",
+  "Video": "Відэа"  
 }
