--- a/src/client/locales/ru/translation.json
+++ b/src/client/locales/ru/translation.json
@@ -13,5 +13,6 @@
   "Close": "Закрыть",
   "No comments and ratings": "Без комментариев и оценок",
   "Your comment": "Ваш комментарий",
-  "Add": "Добавить"  
+  "Add": "Добавить",
+  "Video": "Видео" 
 }
