feat: add loader and translate auth

--- a/src/client/locales/by/translation.json
+++ b/src/client/locales/by/translation.json
@@ -14,5 +14,16 @@
   "No comments and ratings": "Без каментароў і ацэнак",
   "Your comment": "Ваш каментарый",
   "Add": "Дадаць",
-  "Video": "Відэа"  
+  "Video": "Відэа",
+  "You are not": "Вы не ",
+  "registred?": "зарэгістраваныя?",
+  "Do you have": "У вас ёсць ",
+  "a registration?": "рэгістрацыя?",
+  "Email address": "Адрас электроннай пошты",
+  "never share email": "Нікогда не адмовіўся ад сваёй электроннай пошты з кім-небудзь яшчэ.",
+  "Password": "Пароль",
+  "Enter more than 6 symbols.": "Увядзіце больш за 6 знакаў",
+  "Enter login": "Увядзіце лагін",
+  "Register": "Зарэгістравацца",
+  "User was created.": "Карыстальнік быў створаны."
 }
