--- a/src/client/locales/en/translation.json
+++ b/src/client/locales/en/translation.json
@@ -14,5 +14,16 @@
   "No comments and ratings": "No comments and ratings",
   "Your comment": "Your comment",
   "Add": "Add",
-  "Video": "Video"
+  "Video": "Video",
+  "You are not": "You are not ",
+  "registred?": "registred?",
+  "Do you have": "Do you have ",
+  "a registration?": "a registration?",
+  "Email address": "Email address",
+  "never share email": "Well never share your email with anyone else.",
+  "Password": "Password",
+  "Enter more than 6 symbols.": "Enter more than 6 symbols.",
+  "Enter login": "Enter login",
+  "Register": "Register",
+  "User was created.": "User was created."
 }
